# StakloSekac

./: CMakeLists.txt  README.md  main.c
Logic/: README.md  declarations.h  fja.c  main.cpp
Renderer/: README.md  fajlZaPojasnoce.txt  main.cpp
Renderer/Shaders/: Basic.shader  Text.shader  Texture.shader  Transform.shader
Renderer/Shaders/include/: Shader.h
Renderer/Shaders/source/: Shader.cpp
Renderer/include/: IndexBuffer.h  Renderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Renderer/source/: IndexBuffer.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Test/: README.md  main.c
Test/Primeri/: Primer1.txt  Primer2.txt  Primer3.txt  Primer4.txt  Primer5.txt  Primer6.txt
dependencies/include/glad/: glad.h
dependencies/src/: glad.c
pch/: dataPipe.c  dataPipe.h  pch.h  pchDataPipe.h
